turtleart.lessons.turtleart.Main.HouseMany.scala.error
Source:23: error: not found: value get
	setPos(getX()-200,get(Y)-75)
                          ^