turtleart.lessons.turtleart.Main.HouseMany.scala.code
override def run() {
		def faireMaison (dim:Int) {
	avance(dim)
	var x = getX()
	var y = getY()
	droite(30)
	avance(dim)
	allerVers(x+dim,y)
	allerVers(x,y)
	droite (60)
	avance(dim)
	droite(90)
	avance(dim)
	droite(90)
	avance(dim)
	droite(90)

	}
	for (i<- 1 to 4) {
		faireMaison(30)
		setX(getX()+50)
	}
	setPos(getX()-200,get(Y)-75)
	for (i<- 1 to 2) {
		faireMaison(30)
		setX(getX()-200)
	}
	setPos(getX()-200,getY()-75)
	for (i<- 1 to 4) {
		faireMaison(30)
		setX(getX()+50)
	}
	
}
